# vlang

./: .gitmodules  README.md
utils/: setup.sh
vlang/: CMakeLists.txt
vlang/include/: CMakeLists.txt
vlang/include/vlang/Basic/: CommentOptions.h  Diagnostic.h  DiagnosticIDs.h  LLVM.h  LangOptions.h  Linkage.h  OperatorPrecedence.h  SourceLocation.h  TokenKinds.def  TokenKinds.h  Version.h  Version.inc.in  Visibility.h
vlang/include/vlang/Config/: config.h.cmake
vlang/include/vlang/Format/: Format.h
vlang/include/vlang/Frontend/: CommandLineSourceLoc.h  FrontendAction.h  FrontendOptions.h
vlang/include/vlang/Sema/: CodeCompleteOptions.h
vlang/include/vlang/Tooling/: Refactoring.h  Tooling.h
vlang/lib/: CMakeLists.txt
vlang/lib/Basic/: CMakeLists.txt  Version.cpp
vlang/lib/Format/: BreakableToken.cpp  BreakableToken.h  CMakeLists.txt  ContinuationIndenter.cpp  ContinuationIndenter.h  Encoding.h  Format.cpp  FormatToken.cpp  FormatToken.h  TokenAnnotator.cpp  TokenAnnotator.h  UnwrappedLineParser.cpp  UnwrappedLineParser.h  WhitespaceManager.cpp  WhitespaceManager.h
vlang/tools/: CMakeLists.txt
vlang/tools/vlang-format/: CMakeLists.txt  VlangFormat.cpp
